# fantasybaseball

./: .gitignore  README.md  createprojections.py  generate_projections.py  powerrankings.py  pyproject.toml  requirements.txt
fantasybaseball/: aggregation.py  cli.py  columns.py  config.py  exceptions.py  fangraphs.py  formatting.py  glossary.py  model.py  modify.py  playerids.py  points.py  positions.py  powerrankings.py  projections.py  replacement.py  scoring.py  utils.py  valuation.py
fantasybaseball/data/: README.md  player_id_map.csv  refresh_player_map.py
leagues/: beastmode.yaml  dynasty.yaml  standard.yaml  thedoo.yaml
scripts/: generate_rankings.py  pull_projections.py
sitemaps/: README.md  fangraphs_players.backup.csv  fangraphs_players.csv  fangraphs_to_fantrax.csv  fangraphs_to_fantrax.py  player_id_map.csv  refresh_player_map.py
test/fantasybaseball/: fangraphs_test.py
tests/: test_config.py  test_model.py  test_replacement.py  test_scoring.py  test_valuation.py
